--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="rs.digitalvision.digitalvision.MainActivity"
-    android:gravity="center">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_article_code"
+    tools:context="rs.digitalvision.digitalvision.MainActivity">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_article_code"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_article_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_article_code_hint"
-            android:inputType="textCapCharacters"
-            android:maxLength="10"
-            android:singleLine="true" />
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/et_article_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_article_code_hint"
+                android:inputType="textCapCharacters"
+                android:maxLength="10"
+                android:singleLine="true" />
 
-    <Button
-        android:id="@+id/btn_submit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="@string/btn_submit"
-        android:textColor="#ffffff"
-        android:textSize="18sp" />
-</LinearLayout>
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_submit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="40dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/btn_submit"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
+    </LinearLayout>
 </FrameLayout>
