--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -1,35 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:clickable="true"
     tools:context="rs.digitalvision.digitalvision.fragments.ArticleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:orientation="vertical"
+    <com.android.volley.toolbox.NetworkImageView
+        android:id="@+id/img_networkImageView"
+        android:layout_width="150dp"
+        android:layout_height="170dp" />
+
+    <TextView
+        android:id="@+id/tv_price"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/img_networkImageView"
-            android:layout_width="150dp"
-            android:layout_height="170dp" />
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" />
 
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment" />
-        <TextView
-            android:id="@+id/tv_available"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment" />
-        <TextView
-            android:id="@+id/tv_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_blank_fragment" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_available"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:singleLine="false"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
+        android:gravity="center_horizontal" />
+</LinearLayout>
+
