--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -2,36 +2,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@color/colorWhiteTransparent"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
-    android:clickable="true"
     tools:context="rs.digitalvision.digitalvision.fragments.ArticleFragment">
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="24sp" />
 
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/img_networkImageView"
-        android:layout_width="150dp"
-        android:layout_height="170dp" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/tv_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/tv_available"
+        android:id="@+id/tv_price_retail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
-
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:singleLine="false"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:gravity="center_horizontal" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="24sp" />
 </LinearLayout>
 
