--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -28,14 +29,16 @@
             android:name="rs.digitalvision.digitalvision.fragments.KeypadFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="0.5"
+            tools:layout="@layout/fragment_keypad" />
 
         <fragment
             android:id="@+id/article_viewer"
             android:name="rs.digitalvision.digitalvision.fragments.ArticleFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2" />
+            android:layout_weight="0.5"
+            tools:layout="@layout/fragment_article" />
     </LinearLayout>
 
 </LinearLayout>
