--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -6,37 +6,83 @@
     android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
+    android:paddingBottom="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="5dp"
     tools:context="rs.digitalvision.digitalvision.fragments.ArticleFragment">
 
-    <TextView
-        android:id="@+id/tv_title"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.3"
         android:gravity="center"
-        android:textSize="24sp" />
+        android:layout_marginBottom="5dp">
+
+        <TextView
+            android:id="@+id/tv_title_caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/article_title"
+            android:textSize="@dimen/captions_font_size" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_title_caption"
+            android:background="@drawable/background_rectangle_shape"
+            android:gravity="center"
+            android:singleLine="false"
+            android:textSize="@dimen/captions_font_size" />
+    </RelativeLayout>
 
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/img_networkImageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="2.7"
         android:scaleType="centerInside" />
 
-    <TextView
-        android:id="@+id/tv_price"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="24sp" />
+        android:layout_weight="2"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/tv_price_retail"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/tv_vp_caption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/caption_price"
+            android:textSize="@dimen/captions_font_size" />
+
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_vp_caption"
+            android:background="@drawable/background_rectangle_shape"
+            android:gravity="center"
+            android:textSize="@dimen/captions_font_size" />
+
+        <TextView
+            android:id="@+id/tv_mp_caption"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_price"
+            android:text="@string/caption_retail_price"
+            android:textSize="@dimen/captions_font_size" />
+
+        <TextView
+            android:id="@+id/tv_price_retail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_mp_caption"
+            android:background="@drawable/background_rectangle_shape"
+            android:gravity="center"
+            android:textSize="@dimen/captions_font_size" />
+    </RelativeLayout>
 </LinearLayout>
 
