--- a/app/src/main/res/drawable/background_rectangle_shape.xml
+++ b/app/src/main/res/drawable/background_rectangle_shape.xml
@@ -5,7 +5,7 @@
             <corners android:radius="0dp" />
             <solid android:color="@android:color/white" />
             <padding android:bottom="0dp" android:left="10dp" android:right="10dp" android:top="0dp" />
-            <stroke android:width="1dp" android:color="@color/colorPrimaryDark" />
+            <stroke android:width="1dp" android:color="@color/colorRedAccentTransparent" />
         </shape>
     </item>
 </selector>
