--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="KeypadButtonBorderless" parent="android:Widget.DeviceDefault.Button.Borderless">
-        <item name="android:background">@color/colorKeypadBtn</item>
+        <item name="android:background">@color/colorRedAccentTransparent</item>
         <item name="android:textSize">@dimen/captions_font_size</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
