--- a/app/src/main/res/layout-sw600dp/fragment_article.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_article.xml
@@ -15,18 +15,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
         android:layout_weight="1.3"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginBottom="5dp">
 
         <TextView
             android:id="@+id/tv_title_caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/article_title"
-
-            android:textSize="@dimen/captions_font_size_small"
-            android:textColor="@android:color/tertiary_text_light" />
+            android:textSize="@dimen/captions_font_size" />
 
         <TextView
             android:id="@+id/tv_title"
@@ -36,8 +34,8 @@
             android:background="@drawable/background_rectangle_shape"
             android:gravity="center"
             android:singleLine="false"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/captions_font_size_small" />
+            android:textSize="@dimen/captions_font_size"
+            android:textColor="@color/colorBlack" />
     </RelativeLayout>
 
     <com.android.volley.toolbox.NetworkImageView
@@ -58,8 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/caption_price"
-            android:textSize="@dimen/captions_font_size_small"
-            android:textColor="@android:color/tertiary_text_light" />
+            android:textSize="@dimen/captions_font_size" />
 
         <TextView
             android:id="@+id/tv_price"
@@ -68,8 +65,8 @@
             android:layout_below="@id/tv_vp_caption"
             android:background="@drawable/background_rectangle_shape"
             android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/captions_font_size_small" />
+            android:textSize="@dimen/captions_font_size"
+            android:textColor="@color/colorBlack" />
 
         <TextView
             android:id="@+id/tv_mp_caption"
@@ -78,8 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_price"
             android:text="@string/caption_retail_price"
-            android:textSize="@dimen/captions_font_size_small"
-            android:textColor="@android:color/tertiary_text_light" />
+            android:textSize="@dimen/captions_font_size" />
 
         <TextView
             android:id="@+id/tv_price_retail"
@@ -88,8 +84,8 @@
             android:layout_below="@id/tv_mp_caption"
             android:background="@drawable/background_rectangle_shape"
             android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/captions_font_size_small" />
+            android:textSize="@dimen/captions_font_size"
+            android:textColor="@color/colorBlack" />
     </RelativeLayout>
 </LinearLayout>
 
